2002-11-21  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* BaseDataList.cs:
	(Render): call RenderContents (), not base.RenderContents ().

	* DataList.cs: style.

	But I still haven't found what i'm looking for....

2002-11-20  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Calendar.cs: fixed loading/saving selected dates.
	* SelectedDatesCollection.cs: added internal function to get the
	underlying ArrayList.

	Calendar navigation works again. Selecting dates too.

2002-11-12  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* DataList.cs: added a few attributes and fixed infinite recursion.

2002-11-12  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ListItemCollection.cs: fixed LoadViewState.

2002-11-12  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TableItemStyle.cs: TypeDescriptor.GetConverter seems to fail.
	Commented out some code until it works.

2002-10-29      Gaurav Vaish <gvaish_mono@lycos.com>

	* BaseCompareValidator.cs - Fixed operator bug in 
	                            Compare(string, string, ...)
	* CompareValidator.cs     - EvaluateIsValid()            : Implemented.

2002-10-28      Gaurav Vaish <gvaish_mono@lycos.com>

	* BoundColumn.cs        - InitializeCell(TableCell, int, ListItemType)
	                                              : Implemented.
	                        - All Properties      : Now make use of ViewState.

2002-10-28      Gaurav Vaish <gvaish_mono@lycos.com>

	* BaseValidator.cs      - Uncomment NotImplementedException.

2002-10-28      Gaurav Vaish <gvaish_mono@lycos.com>

	* BaseValidator.cs      - Minor changes in TODO comments.

2002-10-28      Gaurav Vaish <gvaish_mono@lycos.com>

	* BaseValidator.cs      - DetermineRenderUpLevel()       : Uncomment
	                          the NotImplementedException being thrown.
	* DataGridPagerStyle.cs - Mode { set; }                  : Implemented.
	* DataGridLinkButton.cs - Added new class (private)      : Implemented.